# crawlee-python

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .rules.md  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  avoid_block.md  best_crawler.py  cliff.toml  cliff_release.toml  codecov.yaml  compose.debug.yaml  compose.yaml  githubBaseUrl  poetry.toml  pullRequestIssues.json  pyproject.toml  renovate.json  selectolax_crawler_run.py  test_metrics.py  typos.toml
.claude/: settings.local.json
.github/: .pull_request_template.md  CODEOWNERS  pull_request_template.md
.github/workflows/: _check_changelog_entry.yaml  _check_code.yaml  _check_docs.yaml  _check_docs_build.yaml  _check_package.yaml  _check_version_conflict.yaml  _checks.yaml  _linting.yaml  _notify_slack_on_failure.yaml  _publish_to_pypi.yaml  _release_docs.yaml  _release_pre.yaml  _tests.yaml  _type_checking.yaml  _unit_tests.yaml  build_and_deploy_docs.yaml  check_changelog_entry.yaml  check_pr_title.yaml  check_version_availability.yaml  check_version_conflict.yaml  code_checks.yaml  doc_checks.yaml  docs.yaml  docs.yml  lint_and_type_checks.yaml  linting.yaml  manual_release_beta.yaml  manual_release_docs.yaml  manual_release_stable.yaml  manual_version_docs.yaml  on_issue.yaml  on_master.yaml  on_pull_request.yaml  on_pull_request_fork.yaml.yml  on_schedule_tests.yaml  pre_release.yaml  release.yaml  run_checks.yaml  run_code_checks.yaml  run_release.yaml  (+8 more)
docs/: pyproject.toml  quick_start.md
docs/deployment/: apify_platform.mdx  aws_lambda.mdx  aws_lambda_beautifulsoup_crawler.mdx  aws_lambda_playwright_crawler.mdx  google_cloud.mdx  google_cloud_run.mdx
docs/examples/: add-data-to-dataset.md  add-data-to-dataset.mdx  add_data_to_dataset.mdx  beautifulsoup-crawler.md  beautifulsoup-crawler.mdx  beautifulsoup_crawler.mdx  capture-screenshot-using-playwright.md  capture-screenshot-using-playwright.mdx  capture_screenshot_using_playwright.mdx  capturing_page_snapshots_with_error_snapshotter.mdx  crawl-all-links-on-a-website.md  crawl-all-links-on-website.md  crawl-all-links-on-website.mdx  crawl-multiple-urls.mdx  crawl-some-links-on-website.md  crawl-specific-links-on-website.md  crawl-specific-links-on-website.mdx  crawl-website-with-relative-links.md  crawl-website-with-relative-links.mdx  crawl_all_links_on_website.mdx  crawl_multiple_urls.mdx  crawl_specific_links_on_website.mdx  crawl_website_with_relative_links.mdx  crawler_keep_alive.mdx  crawler_login.mdx  crawler_stop.mdx  error_snapshotter.mdx  export-dataset-to-csv.md  export-entire-dataset-to-file.md  export-entire-dataset-to-file.mdx  export_entire_dataset_to_file.mdx  extract-the-all-the-pagest.mdx  file_download.mdx  fill-and-submit-web-form.mdx  fill_and_submit_web_form.mdx  http-crawler.md  json_logging.mdx  parsel-crawler.mdx  parsel_crawler.mdx  playwright-crawler.md  (+12 more)
docs/guides/: ai_crawler.mdx  architecture_overview.mdx  avoid_blocking.mdx  avoid_blocking_playwright.py  avoid_blocking_playwright_fingerprints_off.py  avoid_blocking_puppeteer.py  avoid_blocking_puppeteer_fingerprints_off.py  avoid_getting_blocked.mdx  crawler_custom_parser.mdx  crawler_login.mdx  creating_web_archive.mdx  dataset_keyValueStore.md  error_handling.mdx  http_clients.mdx  http_crawlers.mdx  http_headers.mdx  httpcrawler_custom_parser.mdx  open_telemetry.mdx  playwright_crawler.mdx  playwright_crawler_adaptive.mdx  playwright_crawler_stagehand.mdx  proxy_management.mdx  pydantic_ai_crawler.mdx  (+27 more)
env/: pyvenv.cfg
sandbox/: main.py  progress_log_todo.txt
scripts/: check_changelog_entry.py  check_version_availability.py  check_version_conflict.py  check_version_in_changelog.py  fetch_pr_issues.sh  preprocess_commit_message.py  print_current_package_version.py  update_playwright_version.py  update_version_for_prerelease.py  utils.py
src/: broken_links_crawler.ipynb  calebsfile.txt
src/crawlee/project_template/{{cookiecutter.project_name}}/: .dockerignore  Dockerfile  README.md  _pyproject.toml  pyproject.toml  requirements.txt
src/crawlee/project_template/{{cookiecutter.project_name}}/{{cookiecutter.__package_name}}/: __main__.py  main.py  routes.py
tax_rag_project/: .env.example  .gitignore  CHANGELOG.md  README.md  claude.md  docker-compose.yml  pyproject.toml  requirements.txt
tax_rag_project/.github/workflows/: scrape-weekly-deep.yml
tax_rag_project/scripts/: __init__.py  activate.bat  run_all_tests.py  run_crawler.py  run_tests.bat  run_tests.sh  setup.bat  setup.sh  setup_qdrant.bat  setup_qdrant.ps1  setup_qdrant.sh  test.bat  test.sh  test_qdrant_connection.bat  test_qdrant_connection.ps1  test_qdrant_connection.sh  test_qdrant_integration.bat  test_qdrant_integration.ps1  test_qdrant_integration.sh
tax_rag_project/src/tax_rag_scraper/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt  test_deep_crawling.py  test_qdrant_connection.py  test_qdrant_integration.py
tax_rag_project/src/tax_rag_scraper/config/: settings.py
tax_rag_project/src/tax_rag_scraper/crawlers/: __init__.py  base_crawler.py  site_router.py
tax_rag_project/src/tax_rag_scraper/handlers/: __init__.py  base_handler.py  cra_handler.py
tax_rag_project/src/tax_rag_scraper/models/: __init__.py  tax_document.py
tax_rag_project/src/tax_rag_scraper/storage/: __init__.py  qdrant_client.py
tax_rag_project/src/tax_rag_scraper/utils/: embeddings.py  link_extractor.py  robots.py  stats_tracker.py  user_agents.py
tax_rag_project/tests/: test_embeddings.py  test_error_handling.py  test_rate_limiting.py
templates/beautifulsoup/{{cookiecutter.project_name}}/: README.md  pyproject.toml
templates/beautifulsoup/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __main__.py  main.py  routes.py
tests/: stress_test_fixes.py
website/: .oxfmtrc.json  build_api_reference.sh  docusaurus.config.js  generate_module_shortcuts.py  oxlint.config.ts  package-lock.json  package.json  parse_types.py  pnpm-lock.yaml  pnpm-workspace.yaml  pydoc-markdown.yml  sidebars.js  transformDocs.js  versions.json
(+1410 files in other folders)
