[project]
name = "tax-rag-scraper"
version = "0.1.0"
description = "Canadian Tax Documentation Scraper for RAG Pipeline"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

# Note: This project depends on the parent crawlee installation
# Install with: pip install -e ..
dependencies = [
    "crawlee[beautifulsoup]>=1.2.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.7.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "apify-fingerprint-datapoints>=0.7.0",
    "browserforge>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tax_rag_scraper"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 120
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
