[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tax-rag-scraper"
version = "0.1.0"
description = "Canadian Tax Documentation Scraper for RAG Pipeline"
requires-python = ">=3.10"
dependencies = [
    "crawlee[beautifulsoup]>=1.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
