[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
crawlee = {version = "*", extras = ["beautifulsoup"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
